*** empty log message ***

--- a/trunk/doc/case/case.bib
+++ b/trunk/doc/case/case.bib
@@ -95,8 +95,8 @@ pages =           "589--606"
 }
 
 @TECHREPORT{ocaml,
-AUTHOR="Xavier Leroy and Damien Doligez and Jacques Garrigue and Didier R\'emy and and J\'er\^ome Vouillon",
-TITLE="The Objective Caml system, documentation and user's manual - release 3.08",
+AUTHOR="Xavier Leroy and Damien Doligez and Jacques Garrigue and Didier R\'emy and J\'er\^ome Vouillon",
+TITLE="The {Objective Caml} system, documentation and user's manual - release 3.08",
 INSTITUTION="INRIA",
 MONTH="July",
-YEAR="2004"}
+YEAR=2004}
