--- a/trunk/doc/case/case.tex
+++ b/trunk/doc/case/case.tex
@@ -95,7 +95,7 @@
 \newcommand{\metav}[1]{\mbox{\textit{#1}}\xspace}
 
 \newcommand{\Case}{\metav{case}}
-\newcommand{\Ident}{\metav{name}}
+\newcommand{\Ident}{x}
 \newcommand{\Identifier}{\Ident}
 \newcommand{\Label}{\metav{\Verb|`|label}}
 \newcommand{\MIdentifier}{\metav{Modelname}}
