*** empty log message ***

--- a/trunk/doc/case/case.bib
+++ b/trunk/doc/case/case.bib
@@ -100,3 +100,12 @@ TITLE="The {Objective Caml} system, documentation and user's manual - release 3.
 INSTITUTION="INRIA",
 MONTH="July",
 YEAR=2004}
+
+@ARTICLE{haskell,
+EDITOR="Simon Peyton Jones",
+JOURNAL"Journal of Functional Programming",
+TITLE="The {Haskell 98} Language",
+VOLUME=13,
+NUMBER=1,
+MONTH="January",
+YEAR=2003}
