*** empty log message ***

--- a/trunk/doc/case/case.tex
+++ b/trunk/doc/case/case.tex
@@ -179,7 +179,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Bibliography
 
-\bibliographystyle{alpha}
+\bibliographystyle{plain}
 
 \bibliography{case}
 
