*** empty log message ***

--- a/trunk/doc/case/case.bib
+++ b/trunk/doc/case/case.bib
@@ -102,10 +102,11 @@ MONTH="July",
 YEAR=2004}
 
 @ARTICLE{haskell,
-EDITOR="Simon Peyton Jones",
-JOURNAL"Journal of Functional Programming",
+AUTHOR="{Simon Peyton Jones, ed.}",
+JOURNAL="Journal of Functional Programming",
 TITLE="The {Haskell 98} Language",
 VOLUME=13,
 NUMBER=1,
 MONTH="January",
-YEAR=2003}
+YEAR=2003,
+KEY="Peyton Jones"}
