--- a/trunk/doc/case/case.tex
+++ b/trunk/doc/case/case.tex
@@ -161,7 +161,15 @@
 \maketitle
 
 \begin{abstract}
-  Foo bar.
+We present a system, called~\emph{RZ}, for automatic generation of
+program specifications from mathematical theories. We translate
+mathematical theories to specifications by computing their
+realizability interpretations in an ML-like language augmented with
+assertions. While the system is best suited for descriptions of those
+data structures that can be easily described in mathematical
+language (e.g., finitely presented groups, real
+arithmetic, graphs, etc.), it also elucidates the
+relationship between data structures and constructive mathematics.
 \end{abstract}
 
 \input{intro.tex}
