*** empty log message ***

--- a/trunk/doc/case/conclusion.tex
+++ b/trunk/doc/case/conclusion.tex
@@ -35,8 +35,8 @@ programmers to understand.  The theory behind the translation is
 well understood, being the phase-splitting translation of
 Harper, Mitchell, and Moggi \cite{harper+:popl90}.  Because of
 limitations of ML not every parameterized axiom can be
-turned into polymorphism. (ML allows only prenex quantifiers, and the
-quantifiers can range over types but not type operators.)  However
+turned into polymorphism; ML allows only prenex quantifiers, and the
+quantifiers can range over types but not type operators.  However
 we would like to do so where it is possible (the common
 case).  As an alternative, we could retarget the output to a language
 like Haskell~\cite{haskell} which supports the necessary polymorphic types.
