--- a/trunk/doc/case/examples.tex
+++ b/trunk/doc/case/examples.tex
@@ -4,7 +4,7 @@
 \paragraph{Decidable set.}
 \label{sec:decidable-set}
 
-As the first example, we formulate the theory of a decidable set.
+We now consider the theory of a decidable set.
 Recall that in constructive mathematics a set~$S$ is said to be
 \emph{decidable} if $x = y$ or $x \neq y$ for all $x, y \in S$.
 The input to RZ is
@@ -26,8 +26,8 @@ should be expected.
 
 We remark that nothing requires the partial equivalence relation
 \Verb|=s=| to be computable, so not every modest set is decidable. In
-fact, there are many natural examples of non-computable partial
-equivalence relations, such as \emph{extensional equality} of function
+fact, there are many natural and important examples of non-computable partial
+equivalence relations, such as \emph{extensional equality} of functions
 from natural numbers to natural numbers. (If we could computably
 decide whether two functions always give equal results on equal
 arguments, we could write a Halting Oracle.)
