--- a/trunk/doc/case/intro.tex
+++ b/trunk/doc/case/intro.tex
@@ -3,11 +3,11 @@
 
 Kleene~\cite{KleeneSC:intint} introduced realizability as a model of
 intuitionistic arithmetic based on partial computable functions. The
-idea has been studied and generalized by various
+idea has since been studied and generalized by various
 authors~\cite{TroelstraA:rea,HylandJ:efft,HylandJ:trit,OostenJ:exer}.
 Building on the idea of \emph{typed realizability} by
-Longley~\cite{Longley00}, we have constructed a tool \emph{RZ} which
-can translate mathematical theories into specifications for code,
+Longley~\cite{Longley00}, we have constructed a tool \emph{RZ} to
+translate mathematical theories into specifications for code,
 explaining what is necessary in order to believe that we have a correct
 implementation of the mathematical theory.
 
