--- a/trunk/doc/case/realizability.tex
+++ b/trunk/doc/case/realizability.tex
@@ -160,7 +160,7 @@ a modest set and the original one is as follows:
 \item $t \per{S} u$ if $t$ and $u$ realize the same element, i.e.,
   there is $x \in S$ such that $t \rz_S x$ and $u \rz_S x$.
   This relation equates alternate concrete representations of the same
-  abtract value, e.g., equating two concrete graph representations differing
+  abstract value, e.g., equating two concrete graph representations differing
   only in the order of the nodes or the order of the edges.
 \end{itemize}
 %
