--- a/trunk/doc/case/conclusion.tex
+++ b/trunk/doc/case/conclusion.tex
@@ -27,19 +27,20 @@ the specification
    val initial: 
       'a -> ('a -> 'a) -> N.s -> 'a
 \end{Verbatim}
-which is exactly the familiar iterator for natural numbers (i.e., given
-an initial value, a function, and a natural number, apply the function 
-that many times to the initial value).  
-Such types can be much more natural and much simpler for
-programmers to understand.  The theory behind the translation is
-well understood, being the phase-splitting translation of
-Harper, Mitchell, and Moggi \cite{harper+:popl90}.  Because of
-limitations of ML not every parameterized axiom can be
-turned into polymorphism; ML allows only prenex quantifiers, and the
-quantifiers can range over types but not type operators.  However
-we would like to do so where it is possible (the common
-case).  As an alternative, we could retarget the output to a language
-like Haskell~\cite{haskell} which supports the necessary polymorphic types.
+which is exactly the familiar iterator for natural numbers (i.e.,
+given an initial value, a function, and a natural number, apply the
+function that many times to the initial value).  Such types can be
+much more natural and much simpler for programmers to understand.  The
+theory behind the translation is well understood, being the
+phase-splitting translation of Harper, Mitchell, and Moggi
+\cite{harper+:popl90}.  Because of limitations of ML not every
+parameterized axiom can be turned into polymorphism; ML allows only
+prenex quantifiers, and the quantifiers can range over types but not
+type operators.  However we would like to do so where it is possible
+(the common case).  As an alternative, we could attempt to retarget
+the output to a language like Haskell~\cite{haskell} which supports
+the necessary polymorphic types, though Haskell's support of modules
+is much weaker.
 
 Another possible extension would be to allow dependent families in the
 input language. Fortunately, this does not require finding a target
